[package]
name = "enrichment"
version = "0.3.4"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

nalgebra = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
indicatif = { workspace = true }
special = { workspace = true }

matrix-util = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
