[package]
name = "faba"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "faba"
path = "src/main.rs"

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
genomic-data = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
num-traits = { workspace = true }

statrs = { workspace = true }
coitrees = { workspace = true }
parquet = { workspace = true }

colored = { workspace = true }
fnv = "1.0.7"
dashmap = { version = "6.1.0", features = ["rayon"] }
rust-htslib = { workspace = true }
arrow = "56"
