[package]
name = "faba"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

version = "0.2.6"

[lib]
# The library surface exists so `gem`'s integration tests (tests/) can reach
# the public API. Its module docs use illustrative math blocks (β_g ⊙ exp…),
# not runnable examples, so doctests are disabled.
doctest = false

[[bin]]
name = "faba"
path = "src/main.rs"

[features]
default = []
cuda = [
    "data-beans/cuda",
    "data-beans-alg/cuda",
    "matrix-util/cuda",
    "matrix-param/cuda",
    "candle-util/cuda",
    "graph-embedding-util/cuda",
]
metal = [
    "data-beans/metal",
    "data-beans-alg/metal",
    "matrix-util/metal",
    "matrix-param/metal",
    "candle-util/metal",
    "graph-embedding-util/metal",
]
# Forward data-beans's optional `hdf5` feature so `cargo install faba --features hdf5`
# enables the HDF5 backend + .h5/.h5ad readers (requires libhdf5 on the build host).
hdf5 = ["data-beans/hdf5"]

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
genomic-data = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
num-traits = { workspace = true }

statrs = { workspace = true }
coitrees = { workspace = true }
parquet = { workspace = true }

colored = { workspace = true }
rustc-hash = { workspace = true }
dashmap = { version = "6.1.0", features = ["rayon"] }
rust-htslib = { workspace = true }
arrow = "58"

# rna-mod-embed subcommand. candle_core / candle_nn come transitively
# through candle-util (matches the senna / pinto convention) so the
# `cuda` / `metal` features propagate cleanly.
candle-util = { workspace = true }
graph-embedding-util = { workspace = true }
auxiliary-data = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
