[package]
name = "fagioli"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "fagioli"
path = "src/main.rs"

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
candle-util = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
genomic-data = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }

colored = { workspace = true }
rust-htslib = { workspace = true }

# For JSON output
serde = { workspace = true }
serde_json = { workspace = true }
