[package]
name = "genomic-data"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version = "0.3.2"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
matrix-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
