[package]
name = "hsblock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Hierarchical Stochastic Block Model for graph community detection"

[dependencies]
leiden = { workspace = true }
candle-util = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
special = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
candle-core = { version = "0.9.2", features = ["cuda","cudnn"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal","accelerate"] }
candle-nn = { version = "0.9.2", features = ["metal","accelerate"] }
