[package]
name = "hsblock"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Hierarchical Stochastic Block Model for graph community detection"

[dependencies]
leiden = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
special = { workspace = true }
log = { workspace = true }
