[package]
name = "hsblock"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Hierarchical Stochastic Block Model for graph community detection"

version = "0.1.1"

[dependencies]
leiden = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
special = { workspace = true }
log = { workspace = true }
