[package]
name = "matrix-param"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
num-traits = { workspace = true }

approx = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

ndarray = { workspace = true }
ndarray-rand = { workspace = true }
special.workspace = true

matrix-util = { path = "../matrix-util" }

[target.'cfg(target_os = "macos")'.dependencies]
ndarray-linalg = { version = "0.17", default-features = false }
blas-src = { version = "0.11", features = ["accelerate"] }
candle-core = {  version = "0.8.4", features = ["metal","accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
ndarray-linalg = { version = "0.17", features = ["openblas"] }
openblas-src = { version = "0.10" }
candle-core = {  version = "0.8.4", features = ["cuda","cudarc","cudnn"] }

# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["metal","accelerate"] }
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["cuda","cudarc","cudnn"] }
