[package]
name = "matrix-param"
version = "0.3.2"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
num-traits = { workspace = true }

approx = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }

ndarray = { workspace = true }
ndarray-rand = { workspace = true }
special.workspace = true

parquet = { workspace = true }

matrix-util = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-core/cudnn", "candle-nn/cuda"]
metal = [
    "candle-core/metal",
    "candle-core/accelerate",
    "candle-nn/metal",
    "candle-nn/accelerate",
]

[dependencies.candle-core]
version = "0.10"
default-features = false

[dependencies.candle-nn]
version = "0.10"
default-features = false
