[package]
name = "matrix-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
candle-util = { path = "../candle-util/" }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
num-traits = { workspace = true }

approx = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
ndarray-rand = { workspace = true }

instant-distance = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
fnv = "1.0.7"
