[package]
name = "matrix-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
num-traits = { workspace = true }

approx = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
ndarray-rand = { workspace = true }

instant-distance = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
fnv = { workspace = true }
zip = "5.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["cuda","cudarc","cudnn"] }
# candle-nn = {  git = "https://github.com/huggingface/candle.git", package = "candle-nn", features = ["cuda"] }
candle-core = {  version = "0.9.1", features = ["cuda","cudarc","cudnn"] }
candle-nn = {  version = "0.9.1", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
# candle-core = {  git = "https://github.com/huggingface/candle.git", package = "candle-core", features = ["metal","accelerate"] }
# candle-nn = {  git = "https://github.com/huggingface/candle.git", package = "candle-nn", features = ["metal","accelerate"] }
candle-core = {  version = "0.9.1", features = ["metal","accelerate"] }
candle-nn = {  version = "0.9.1", features = ["metal","accelerate"] }
