[package]
name = "mcmc-util"
authors.workspace = true
edition.workspace = true
license.workspace = true

version = "0.1.1"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }

rand = { workspace = true }
rand_distr = { workspace = true }

nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
num-traits = { workspace = true }

approx = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

indicatif = { workspace = true }
parquet = { workspace = true }
matrix-util = { workspace = true }

# zip = "5.1.1"

[features]
default = []
cuda = ["candle-core/cuda", "candle-core/cudnn"]
metal = ["candle-core/metal", "candle-core/accelerate"]

[dependencies.candle-core]
version = "0.10"
default-features = false
