[package]
name = "pinto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Probably Interacting Neighbourhood analysis by Topic modelling"

[[bin]]
name = "pinto"
path = "src/main.rs"

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
candle-util = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
