[package]
name = "pinto"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "pinto"
path = "src/main.rs"

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
candle-util = { workspace = true }
parquet = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
