[package]
name = "pinto"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version = "0.5.1"

[[bin]]
name = "pinto"
path = "src/main.rs"

[features]
default = []
cuda = [
    "candle-util/cuda",
    "data-beans/cuda",
    "data-beans-alg/cuda",
    "graph-embedding-util/cuda",
    "mcmc-util/cuda",
    "matrix-util/cuda",
    "matrix-param/cuda",
]
metal = [
    "candle-util/metal",
    "data-beans/metal",
    "data-beans-alg/metal",
    "graph-embedding-util/metal",
    "mcmc-util/metal",
    "matrix-util/metal",
    "matrix-param/metal",
]
hdf5 = ["data-beans/hdf5"]

[dependencies]
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
candle-util = { workspace = true }
auxiliary-data = { workspace = true }
graph-embedding-util = { workspace = true }
mcmc-util = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
leiden = { workspace = true }
parquet = { workspace = true }
plot-utils = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

dashmap = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }
wide = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }
rustc-hash = { workspace = true }
