[package]
name = "plot-utils"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[lib]
name = "plot_utils"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
base64 = { workspace = true }
resvg = { workspace = true }
svg2pdf = { workspace = true }
tiny-skia = { workspace = true }
usvg = { workspace = true }
