[package]
name = "senna"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Single-cell data Embedding with Nearest Neighbourhood Adjustment"

[[bin]]
name = "senna"
path = "src/main.rs"

[dependencies]
asap-data = { workspace = true }
asap-alg = { workspace = true }
candle-util = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

instant-distance = { workspace = true }
special = { workspace = true }
indicatif = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
