[package]
name = "senna"
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true

[lib]
name = "senna"
path = "src/lib.rs"

[[bin]]
name = "senna"
path = "src/main.rs"

[dependencies]
auxiliary-data = { workspace = true }
cnv = { workspace = true }
data-beans = { workspace = true }
data-beans-alg = { workspace = true }
candle-util = { workspace = true }
genomic-data = { workspace = true }
matrix-util = { workspace = true }
matrix-param = { workspace = true }
leiden = { workspace = true }
hsblock = { workspace = true }
enrichment = { workspace = true }
plot-utils = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
nalgebra-sparse = { workspace = true }
approx = { workspace = true }

special = { workspace = true }
indicatif = { workspace = true }
indicatif-log-bridge = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
statrs = { workspace = true }
colored = { workspace = true }
ctrlc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# 2D graphics / SVG (senna plot)
base64 = { workspace = true }
resvg = { workspace = true }
svg2pdf = { workspace = true }
tiny-skia = { workspace = true }
usvg = { workspace = true }
